inclusão dos arquivos fontes (C/C++) e alguns arquivos de referencia

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+## latex
 *.aux
 *.glo
 *.idx
@@ -21,3 +22,30 @@
 *.out
 *.swp
 *.synctex.gz
+
+## C/C++
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Libraries
+*.lib
+*.a
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
